sit-core/src/duktape/bindings.rs

extern "C" {
    pub fn duk_opt_lstring(ctx: *mut duk_context, idx: duk_idx_t,
                           out_len: *mut duk_size_t,
                           def_ptr: *const ::std::os::raw::c_char,
                           def_len: duk_size_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_opt_buffer(ctx: *mut duk_context, idx: duk_idx_t,
                          out_size: *mut duk_size_t,
                          def_ptr: *mut ::std::os::raw::c_void,
                          def_size: duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_opt_buffer_data(ctx: *mut duk_context, idx: duk_idx_t,
                               out_size: *mut duk_size_t,
                               def_ptr: *mut ::std::os::raw::c_void,
                               def_size: duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_opt_pointer(ctx: *mut duk_context, idx: duk_idx_t,
                           def_value: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_opt_c_function(ctx: *mut duk_context, idx: duk_idx_t,
                              def_value: duk_c_function) -> duk_c_function;
}
extern "C" {
    pub fn duk_opt_context(ctx: *mut duk_context, idx: duk_idx_t,
                           def_value: *mut duk_context) -> *mut duk_context;
}
extern "C" {
    pub fn duk_opt_heapptr(ctx: *mut duk_context, idx: duk_idx_t,
                           def_value: *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_require_undefined(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_require_null(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_require_boolean(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_require_number(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_double_t;
}
extern "C" {
    pub fn duk_require_int(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_int_t;
}
extern "C" {
    pub fn duk_require_uint(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_uint_t;
}
extern "C" {
    pub fn duk_require_string(ctx: *mut duk_context, idx: duk_idx_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_require_lstring(ctx: *mut duk_context, idx: duk_idx_t,
                               out_len: *mut duk_size_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_require_object(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_require_buffer(ctx: *mut duk_context, idx: duk_idx_t,
                              out_size: *mut duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_require_buffer_data(ctx: *mut duk_context, idx: duk_idx_t,
                                   out_size: *mut duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_require_pointer(ctx: *mut duk_context, idx: duk_idx_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_require_c_function(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_c_function;
}
extern "C" {
    pub fn duk_require_context(ctx: *mut duk_context, idx: duk_idx_t)
     -> *mut duk_context;
}
extern "C" {
    pub fn duk_require_function(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_require_heapptr(ctx: *mut duk_context, idx: duk_idx_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_to_undefined(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_to_null(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_to_boolean(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_to_number(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_double_t;
}
extern "C" {
    pub fn duk_to_int(ctx: *mut duk_context, idx: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_to_uint(ctx: *mut duk_context, idx: duk_idx_t) -> duk_uint_t;
}
extern "C" {
    pub fn duk_to_int32(ctx: *mut duk_context, idx: duk_idx_t) -> duk_int32_t;
}
extern "C" {
    pub fn duk_to_uint32(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_uint32_t;
}
extern "C" {
    pub fn duk_to_uint16(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_uint16_t;
}
extern "C" {
    pub fn duk_to_string(ctx: *mut duk_context, idx: duk_idx_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_to_lstring(ctx: *mut duk_context, idx: duk_idx_t,
                          out_len: *mut duk_size_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_to_buffer_raw(ctx: *mut duk_context, idx: duk_idx_t,
                             out_size: *mut duk_size_t, flags: duk_uint_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_to_pointer(ctx: *mut duk_context, idx: duk_idx_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_to_object(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_to_primitive(ctx: *mut duk_context, idx: duk_idx_t,
                            hint: duk_int_t);
}
extern "C" {
    pub fn duk_safe_to_lstring(ctx: *mut duk_context, idx: duk_idx_t,
                               out_len: *mut duk_size_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_get_length(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_size_t;
}
extern "C" {
    pub fn duk_set_length(ctx: *mut duk_context, idx: duk_idx_t,
                          len: duk_size_t);
}
extern "C" {
    pub fn duk_base64_encode(ctx: *mut duk_context, idx: duk_idx_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_base64_decode(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_hex_encode(ctx: *mut duk_context, idx: duk_idx_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_hex_decode(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_json_encode(ctx: *mut duk_context, idx: duk_idx_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_json_decode(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_buffer_to_string(ctx: *mut duk_context, idx: duk_idx_t)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_resize_buffer(ctx: *mut duk_context, idx: duk_idx_t,
                             new_size: duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_steal_buffer(ctx: *mut duk_context, idx: duk_idx_t,
                            out_size: *mut duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_config_buffer(ctx: *mut duk_context, idx: duk_idx_t,
                             ptr: *mut ::std::os::raw::c_void,
                             len: duk_size_t);
}
extern "C" {
    pub fn duk_get_prop(ctx: *mut duk_context, obj_idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_prop_string(ctx: *mut duk_context, obj_idx: duk_idx_t,
                               key: *const ::std::os::raw::c_char)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_prop_lstring(ctx: *mut duk_context, obj_idx: duk_idx_t,
                                key: *const ::std::os::raw::c_char,
                                key_len: duk_size_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_prop_index(ctx: *mut duk_context, obj_idx: duk_idx_t,
                              arr_idx: duk_uarridx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_prop_heapptr(ctx: *mut duk_context, obj_idx: duk_idx_t,
                                ptr: *mut ::std::os::raw::c_void)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_prop(ctx: *mut duk_context, obj_idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_prop_string(ctx: *mut duk_context, obj_idx: duk_idx_t,
                               key: *const ::std::os::raw::c_char)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_prop_lstring(ctx: *mut duk_context, obj_idx: duk_idx_t,
                                key: *const ::std::os::raw::c_char,
                                key_len: duk_size_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_prop_index(ctx: *mut duk_context, obj_idx: duk_idx_t,
                              arr_idx: duk_uarridx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_prop_heapptr(ctx: *mut duk_context, obj_idx: duk_idx_t,
                                ptr: *mut ::std::os::raw::c_void)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_del_prop(ctx: *mut duk_context, obj_idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_del_prop_string(ctx: *mut duk_context, obj_idx: duk_idx_t,
                               key: *const ::std::os::raw::c_char)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_del_prop_lstring(ctx: *mut duk_context, obj_idx: duk_idx_t,
                                key: *const ::std::os::raw::c_char,
                                key_len: duk_size_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_del_prop_index(ctx: *mut duk_context, obj_idx: duk_idx_t,
                              arr_idx: duk_uarridx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_del_prop_heapptr(ctx: *mut duk_context, obj_idx: duk_idx_t,
                                ptr: *mut ::std::os::raw::c_void)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_has_prop(ctx: *mut duk_context, obj_idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_has_prop_string(ctx: *mut duk_context, obj_idx: duk_idx_t,
                               key: *const ::std::os::raw::c_char)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_has_prop_lstring(ctx: *mut duk_context, obj_idx: duk_idx_t,
                                key: *const ::std::os::raw::c_char,
                                key_len: duk_size_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_has_prop_index(ctx: *mut duk_context, obj_idx: duk_idx_t,
                              arr_idx: duk_uarridx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_has_prop_heapptr(ctx: *mut duk_context, obj_idx: duk_idx_t,
                                ptr: *mut ::std::os::raw::c_void)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_prop_desc(ctx: *mut duk_context, obj_idx: duk_idx_t,
                             flags: duk_uint_t);
}
extern "C" {
    pub fn duk_def_prop(ctx: *mut duk_context, obj_idx: duk_idx_t,
                        flags: duk_uint_t);
}
extern "C" {
    pub fn duk_get_global_string(ctx: *mut duk_context,
                                 key: *const ::std::os::raw::c_char)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_get_global_lstring(ctx: *mut duk_context,
                                  key: *const ::std::os::raw::c_char,
                                  key_len: duk_size_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_global_string(ctx: *mut duk_context,
                                 key: *const ::std::os::raw::c_char)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_put_global_lstring(ctx: *mut duk_context,
                                  key: *const ::std::os::raw::c_char,
                                  key_len: duk_size_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_inspect_value(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_inspect_callstack_entry(ctx: *mut duk_context,
                                       level: duk_int_t);
}
extern "C" {
    pub fn duk_get_prototype(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_set_prototype(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_get_finalizer(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_set_finalizer(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_set_global_object(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_get_magic(ctx: *mut duk_context, idx: duk_idx_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_set_magic(ctx: *mut duk_context, idx: duk_idx_t,
                         magic: duk_int_t);
}
